--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
-    <title>새로워진 ZEM 혜택 모음</title>
-    <meta name="title" content="새로워진 ZEM 혜택 모음" />
-    <meta name="description" content="새로워진 ZEM 하나로 모두 다 안심 이게되네!" />
+    <title>SPRITE CPS TEST</title>
+    <meta name="title" content="SPRITE CPS TEST" />
+    <meta name="description" content="SPRITE CPS TEST DESCRIPTION" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="새로워진 ZEM 혜택 모음" />
-    <meta property="og:description" content="새로워진 ZEM 하나로 모두 다 안심 이게되네!" />
+    <meta property="og:title" content="SPRITE CPS TEST" />
+    <meta property="og:description" content="SPRITE CPS TEST DESCRIPTION" />
     <meta property="og:url" content="https://skt-zem.co.kr/" />
     <meta property="og:image" content="https://skt-zem.co.kr/images/ogtag.png" />
     <meta name="color-scheme" content="light only"/>
